--- a/package.json
+++ b/package.json
@@ -18,6 +18,15 @@
   "dependencies": {
     "aws-sdk": "^2.2.43",
     "body-parser": "^1.15.0",
-    "express": "^4.13.4"
-  }
+    "cookie-parser": "^1.4.1",
+    "express": "^4.13.4",
+    "express-jwt": "^3.3.0",
+    "jsonwebtoken": "^5.7.0",
+    "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-http-oauth": "^0.1.3",
+    "passport-local": "^1.0.0"
+  },
+  "private": true
 }
